応募フォームとボタンの調整をしました。

--- a/src/index.html
+++ b/src/index.html
@@ -122,22 +122,6 @@
                         <li><img src="assets/images/about/about_thumb_04.jpg" alt=""><h4 class="font-notosans regular navy">ゆってぃさんのYouTubeで全力ストレッチに<br>
                         挑んでいただきました。</h4></li>
                     </ul>
-
-                    <!-- <div class="slider">   
-                        <div><img src="assets/images/about/about_thumb_01.jpg"></div>
-                        <div><img src="assets/images/about/about_thumb_02.jpg"><div>   
-                        <div><img src="assets/images/about/about_thumb_03.jpg"></div>
-                        <div><img src="assets/images/about/about_thumb_04.jpg"></div>
-                    </div> -->
-
-                    <!-- <div class="swiper-container">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide"><img src="assets/images/about/about_thumb_01.jpg" alt="sample"></div>
-                            <div class="swiper-slide"><img src="assets/images/about/about_thumb_02.jpg" alt="sample"></div>
-                            <div class="swiper-slide"><img src="assets/images/about/about_thumb_03.jpg" alt="sample"></div>
-                            <div class="swiper-slide"><img src="assets/images/about/about_thumb_04.jpg" alt="sample"></div>
-                        </div>
-                    </div> -->
                 </div>
 
             </div>
@@ -336,8 +320,9 @@
                             <li class="indicator fs-14 font-roboto navy" data-slide-index="4">05</li>
                         </ul>
                         <div class="slider-buttons">
-                            <button class="prev slider-btn" id="slider-prev"><img src="./assets/images/common/arrow_prev.svg" alt="previous" class="prev_img"></button>
-                            <button class="next slider-btn" id="slider-next"><img src="./assets/images/common/arrow_next.svg" alt="next" class="next_img"></button>
+                            <button class="prev slider-btn" id="slider-prev"><svg id="_レイヤー_2" class="prev_img" role="img" aria-label="previous" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40"><defs><style>.cls-1{fill:#fff;}.cls-2{fill:#092f4a;}</style></defs><g id="design"><circle class="cls-1" cx="20" cy="20" r="20"/><polygon class="cls-2" points="22.68 27.05 14.22 20 22.68 12.95 23.32 13.72 15.78 20 23.32 26.28 22.68 27.05"/></g></svg></button>
+
+                            <button class="next slider-btn" id="slider-next"><svg id="_レイヤー_2" class="next_img" role="img" aria-label="next" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40"><defs><style>.cls-1{fill:#fff;}.cls-2{fill:#292f4a;}</style></defs><g id="design"><circle class="cls-1" cx="20" cy="20" r="20"/><polygon class="cls-2" points="17.32 27.05 16.68 26.28 24.22 20 16.68 13.72 17.32 12.95 25.78 20 17.32 27.05"/></g></svg></button>
                         </div>
                     </div>
                 </div>
@@ -559,7 +544,7 @@
                         <table class="font-notosans navy">
                             <tr>
                                 <th class="navy medium">お名前<span class="white regular">必須</span></th>
-                                <td><input class="form_input regular lightblue" id="name" type="text" name="yourname" placeholder="フルネームをご入力ください"></td>
+                                <td><input class="form_input regular navy" id="name" type="text" name="yourname" placeholder="フルネームをご入力ください"></td>
                             </tr>
                             <tr>
                                 <th class="navy medium">生年月日<span class="white regular">必須</span></th>
@@ -593,13 +578,6 @@
             </div>
         </section>
     </main>
-    <!-- <select
-    onchange="this.className=this.options[this.selectedIndex].className"
-    class="input_lightblue">
-    <option class="input_lightblue" value="apple" >Apple</option>
-    <option class="input_navy" value="banana" >Banana</option>
-    <option class="blueText" value="grape" >Grape</option>
-</select> -->
     <footer>
         <p class="font-notosans regular navy">体幹軸調整で驚くほど広がる｡</p>
         <a href="#"><img src="assets/images/common/logo_bk.png" alt="全力ストレッチ"></a>
