areaをスマホに対応させました。

--- a/src/index.html
+++ b/src/index.html
@@ -291,16 +291,18 @@
 
         <section id="area">
             <div class="area_wrap">
-                <img src="assets/images/area/area_map.png" alt="">
-                <div class="area_title">
-                    <h2 class="sec_title">AREA</h2>
-                    <span class="sec_title_sub">あなたに合ったエリアで働ける</span>
+                <div class="area_wrap_left">
+                    <div class="area_title">
+                        <h2 class="sec_title">AREA</h2>
+                        <span class="sec_title_sub">あなたに合ったエリアで働ける</span>
+                    </div>
+                    <div class="area_content">
+                        <p class="bg_gradient font-notosans bold white">全力ストレッチは全国35店舗</p>
+                        <p class="bg_gradient font-notosans bold white">まだまだ出店拡大中！</p>
+                        <p class="font-notosans regular navy">一緒に全力ストレッチを育てていける<br>スタッフを募集しています。</p>
+                    </div>
                 </div>
-                <div class="area_content">
-                    <p class="bg_gradient font-notosans bold white">全力ストレッチは全国35店舗</p>
-                    <p class="bg_gradient font-notosans bold white">まだまだ出店拡大中！</p>
-                    <p class="font-notosans regular navy">一緒に全力ストレッチを育てていける<br>スタッフを募集しています。</p>
-                </div>
+                <img class="area_wrap_right" src="assets/images/area/area_map.png" alt="">
             </div>
         </section>
 
@@ -549,7 +551,7 @@
                             </tr>
                             <tr>
                                 <th class="navy medium">生年月日<span class="white regular">必須</span></th>
-                                <td><input class="form_input regular navy" id="birthday" type="text" name="yourbirthday" placeholder="20000101 スラッシュは不要です"></td>
+                                <td><input class="form_input regular navy" id="birthday" type="text" name="yourbirthday" placeholder="20000101"></td>
                             </tr>
                             <tr>
                                 <th class="navy medium">メールアドレス<span class="white regular">必須</span></th>
@@ -557,7 +559,7 @@
                             </tr>
                             <tr>
                                 <th class="navy medium">電話番号<span class="white regular">必須</span></th>
-                                <td><input class="form_input regular navy" id="tel" type="tel" name="yourtel" placeholder="半角英字ハイフンなしでご入力ください"></td>
+                                <td><input class="form_input regular navy" id="tel" type="tel" name="yourtel" placeholder="ハイフンなしでご入力ください"></td>
                             </tr>
                             <tr class="work_location">
                                 <th class="navy medium">希望エリア<span class="not_required"></span></th>
