flowのスマホ版を実装しました。

--- a/src/index.html
+++ b/src/index.html
@@ -307,9 +307,8 @@
         </section>
 
         <section id="flow">
-            <div class="flow_top">
-                <div class="flow_top_left"></div>
-                <div class="flow_top_middle">
+            <div class="flow_slider">
+                <div class="flow_slider_top">
                     <div class="flow_title">
                         <h2 class="sec_title">FLOW</h2>
                         <span class="sec_title_sub">エントリーからデビューまで</span>
@@ -324,109 +323,101 @@
                         </ul>
                         <div class="slider-buttons">
                             <button class="prev slider-btn" id="slider-prev"><svg id="_レイヤー_2" class="prev_img" role="img" aria-label="previous" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40"><defs><style>.cls-1{fill:#fff;}.cls-2{fill:#092f4a;}</style></defs><g id="design"><circle class="cls-1" cx="20" cy="20" r="20"/><polygon class="cls-2" points="22.68 27.05 14.22 20 22.68 12.95 23.32 13.72 15.78 20 23.32 26.28 22.68 27.05"/></g></svg></button>
-
                             <button class="next slider-btn" id="slider-next"><svg id="_レイヤー_2" class="next_img" role="img" aria-label="next" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40"><defs><style>.cls-1{fill:#fff;}.cls-2{fill:#292f4a;}</style></defs><g id="design"><circle class="cls-1" cx="20" cy="20" r="20"/><polygon class="cls-2" points="17.32 27.05 16.68 26.28 24.22 20 16.68 13.72 17.32 12.95 25.78 20 17.32 27.05"/></g></svg></button>
                         </div>
                     </div>
                 </div>
-                <!-- <div class="flow_top_right"></div> -->
-            </div>
 
-            <div class="flow_bottom">
-                <!-- <div class="flow_bottom_left"></div> -->
-                <div class="insp-slider">
-                    <!-- Step1 -->
-                    <div class="card">
-                        <div class="card-inner">
-                            <div class="card_left">
-                                <img src="assets/images/flow/flow_img_01.jpg">
-                            </div>
-                            <div class="card_right">
-                                <div class="card_right_step">
-                                    <span class="font-roboto bold lightblue">STEP.<span class="step_number">01</span></span>
-                                    <h3 class="font-notosans medium navy">エントリー･面接</h3>
+                <div class="flow_slider_bottom">
+                    <div class="insp-slider">
+                        <!-- Step1 -->
+                        <div class="card">
+                            <div class="card-inner">
+                                <div class="card_left">
+                                    <img src="assets/images/flow/flow_img_01.jpg">
                                 </div>
-
-                                <p class="font-notosans regular navy">エントリーをしたらLINE、電話で面接の日程を決めて面接を行います。</p>
-                                <div class="card_right_navy font-notosans medium white"><p>面接会場</p></div>
-                                <p class="font-notosans regular navy">全力ストレッチ 六本木店<br>
-                                〒106-0032東京都港区六本木５丁目１８－１８プレシャス六本木ビル 3F<br>
-                                ※地方の場合は店舗に面接を実施する場合がございます。</p>
+                                <div class="card_right">
+                                    <div class="card_right_step">
+                                        <span class="font-roboto bold lightblue">STEP.<span class="step_number">01</span></span>
+                                        <h3 class="font-notosans medium navy">エントリー･面接</h3>
+                                    </div>
+                                    <p class="font-notosans regular navy">エントリーをしたらLINE、電話で面接の日程を決めて面接を行います。</p>
+                                    <div class="card_right_navy font-notosans medium white"><p>面接会場</p></div>
+                                    <p class="font-notosans regular navy">全力ストレッチ 六本木店<br>
+                                    〒106-0032<br class="sp_only">東京都港区六本木５丁目１８－１８プレシャス六本木ビル 3F<br>
+                                    ※地方の場合は店舗に面接を実施する場合がございます。</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <!-- Step2 -->
-                    <div class="card">
-                        <div class="card-inner">
-                            <div class="card_left">
-                                <img src="assets/images/flow/flow_img_02.jpg">
-                            </div>
-                            <div class="card_right">
-                                <div class="card_right_step">
-                                    <span class="font-roboto bold lightblue">STEP.<span class="step_number">02</span></span>
-                                    <h3 class="font-notosans medium navy">学科講習</h3>
+                        <!-- Step2 -->
+                        <div class="card">
+                            <div class="card-inner">
+                                <div class="card_left">
+                                    <img src="assets/images/flow/flow_img_02.jpg">
                                 </div>
-
-                                <p class="font-notosans regular navy">面接後はZSTA 協会認定トレーナーの資格習得のための1週間講習が始まります。解剖学を1からシッカリと学んでいきます。<br>
-                                <br>
-                                ※地方の場合は店舗に本部スタッフが出張し講習を行います。</p>
+                                <div class="card_right">
+                                    <div class="card_right_step">
+                                        <span class="font-roboto bold lightblue">STEP.<span class="step_number">02</span></span>
+                                        <h3 class="font-notosans medium navy">学科講習</h3>
+                                    </div>
+                                    <p class="font-notosans regular navy">面接後はZSTA 協会認定トレーナーの資格習得のための1週間講習が始まります。解剖学を1からシッカリと学んでいきます。<br>
+                                    <br>
+                                    ※地方の場合は店舗に本部スタッフが出張し講習を行います。</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <!-- Step3 -->
-                    <div class="card">
-                        <div class="card-inner">
-                            <div class="card_left">
-                                <img src="assets/images/flow/flow_img_03.jpg">
-                            </div>
-                            <div class="card_right">
-                                <div class="card_right_step">
-                                    <span class="font-roboto bold lightblue">STEP.<span class="step_number">03</span></span>
-                                    <h3 class="font-notosans medium navy">実技講習</h3>
+                        <!-- Step3 -->
+                        <div class="card">
+                            <div class="card-inner">
+                                <div class="card_left">
+                                    <img src="assets/images/flow/flow_img_03.jpg">
                                 </div>
-                                
-                                <p class="font-notosans regular navy">解剖学を学びつつ実技の講習を行います。<br>
-                                同期の子と協力しながら数々の技を身に付けていきます。</p>
+                                <div class="card_right">
+                                    <div class="card_right_step">
+                                        <span class="font-roboto bold lightblue">STEP.<span class="step_number">03</span></span>
+                                        <h3 class="font-notosans medium navy">実技講習</h3>
+                                    </div>
+                    
+                                    <p class="font-notosans regular navy">解剖学を学びつつ実技の講習を行います。<br>
+                                    同期の子と協力しながら数々の技を身に付けていきます。</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <!-- Step4 -->
-                    <div class="card step4">
-                        <div class="card-inner">
-                            <div class="card_left">
-                                <img src="assets/images/flow/flow_img_04.jpg">
-                            </div>
-                            <div class="card_right">
-                                <div class="card_right_step">
-                                    <span class="font-roboto bold lightblue">STEP.<span class="step_number">04</span></span>
-                                    <h3 class="font-notosans medium navy">ZSTA 協会認定トレーナーの資格
-                                        →配属先決定</h3>
+                        <!-- Step4 -->
+                        <div class="card step4">
+                            <div class="card-inner">
+                                <div class="card_left">
+                                    <img src="assets/images/flow/flow_img_04.jpg">
                                 </div>
-
-                                <p class="font-notosans regular navy">ZSTA 協会認定トレーナーを習得したら次は配属先の店舗を決めていきます。<br>
-                                本部、店舗オーナーと話しあいながら自分の条件とあったところを探していきます。</p>
+                                <div class="card_right">
+                                    <div class="card_right_step">
+                                        <span class="font-roboto bold lightblue">STEP.<span class="step_number">04</span></span>
+                                        <h3 class="font-notosans medium navy">ZSTA 協会認定トレーナーの資格
+                                            →配属先決定</h3>
+                                    </div>
+                                    <p class="font-notosans regular navy">ZSTA 協会認定トレーナーを習得したら次は配属先の店舗を決めていきます。<br>
+                                    本部、店舗オーナーと話しあいながら自分の条件とあったところを探していきます。</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <!-- Step5 -->
-                    <div class="card">
-                        <div class="card-inner">
-                            <div class="card_left">
-                                <img src="assets/images/flow/flow_img_05.jpg">
-                            </div>
-                            <div class="card_right">
-                                <div class="card_right_step">
-                                    <span class="font-roboto bold lightblue">STEP.<span class="step_number">05</span></span>
-                                    <h3 class="font-notosans medium navy">店舗配属→実務開始</h3>
+                        <!-- Step5 -->
+                        <div class="card">
+                            <div class="card-inner">
+                                <div class="card_left">
+                                    <img src="assets/images/flow/flow_img_05.jpg">
                                 </div>
-
-                                <p class="font-notosans regular navy">店舗が決まったら早速実務開始です。<br>
-                                沢山のお客さんをあなたの技術でほぐし＆伸ばしてあげてください。</p>
+                                <div class="card_right">
+                                    <div class="card_right_step">
+                                        <span class="font-roboto bold lightblue">STEP.<span class="step_number">05</span></span>
+                                        <h3 class="font-notosans medium navy">店舗配属→実務開始</h3>
+                                    </div>
+                                    <p class="font-notosans regular navy">店舗が決まったら早速実務開始です。<br>
+                                    沢山のお客さんをあなたの技術でほぐし＆伸ばしてあげてください。</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!-- <div class="flow_bottom_right"></div> -->
             </div>
 
             <div class="flow_calltoaction">
@@ -467,7 +458,7 @@
                     <tr>
                         <th class="medium">応募資格</th>
                         <td class="regular">〈未経験・フリーランス歓迎！〉<br>
-                         ◎学歴・ブランク・知識・経験など一切不問！<br>
+                        ◎学歴・ブランク・知識・経験など一切不問！<br>
                         ★独立支援サポート有！野心のある方も歓迎！</td>
                     </tr>
 
