precedentのスマホ版を実装しました。

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
                 <div class="precedent_bottom">
                     <div class="precedent_bottom_item font-notosans">
                         <img src="assets/images/precedent/precedent_sae.png" alt="">
-                        <h3 class="medium">入社○年目 SAEさん</h3>
+                        <h3 class="medium">入社○年目 ERISAさん</h3>
                         <p class="data medium">勤務務時間：160h/月<br>
                         指名料：270,000円<br>
                         給与：1,000,000円</p>
@@ -94,7 +94,7 @@
             <div class="precedent_right"></div>
 
             <img class="precedent_bg_01" src="assets/images/common/slash_01.svg">
-            <img class="precedent_bg_02" src="assets/images/common/slash_03.svg">
+            <img class="precedent_bg_02 pc_only" src="assets/images/common/slash_03.svg">
         </section>
 
         <section id="about">
