flow内バナーのスマホ版を実装しました。

--- a/src/index.html
+++ b/src/index.html
@@ -427,11 +427,11 @@
                 <div class="flow_calltoaction_content">
                     <h3 class="font-notosans medium navy">理想の未来に､</h3>
                     <h3 class="font-notosans medium navy">一歩踏み出そう｡</h3>
-                    <p class="font-notosans bold white">今エントリーされた方に限り､資格講習費の<span>10</span>万円が<span class="cta_number">0</span>円で<br>
-                    ZSTA協会認定トレーナー資格が取得できるキャンペーン中！</p>
+                    <p class="font-notosans bold white">今エントリーされた方に限り､<br class="sp_only">資格講習費の<span>10</span>万円が<span class="cta_number">0</span>円で<br>
+                    ZSTA協会認定トレーナー資格が<br class="sp_only">取得できるキャンペーン中！</p>
                     <button class="gradient-btn" type="button" onclick="location.href='#entry'">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></button>
                 </div>
-                <!-- <img src="assets/images/flow/flow_cta_img.png"> -->
+                <img class="sp_only" src="assets/images/flow/flow_cta_img.png">
             </div>
         </section>
 
