--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <h1><img src="./images/logo_wh.png" alt="全力ストレッチ"></h1>
         <div class="header_right">
-            <button class="gradient-btn" type="button" onclick="location.href='#entry'">WEBで簡単エントリー</button>
+            <button class="gradient-btn pc_only" type="button" onclick="location.href='#entry'">WEBで簡単エントリー</button>
         </div>
     </header>
 
@@ -25,25 +25,26 @@
             <div class="keyvisual_content">
                 <div class="keyvisual_left">
                     <img src="./images/keyvisual_title.svg" alt="あなたが輝く最高のキャリア">
+                    <img class="kevisual_img sp_only" src="./images/keyvisual_img_sp.png">
                     <p class="keyvisual_copy font-notosans bold white">未経験からでも<span class="yellow">年収<span class="ten-million font-roboto bold">1<span class="comma">,</span>000</span>万円</span>が目指せる</p>
                     <div class="keyvisual_left_point">
                         <div class="keyvisual_left_point_item">
                             <h3 class="font-roboto bold"><span class="tx_gradient point">POINT.</span><span class="tx_gradient number">01</span></h3>
-                            <p class="font-notosans bold navy">9割が未経験<br>スタート</p>
+                            <p class="font-notosans bold navy">9割が<br class="sp_only">未経験<br>スタート</p>
                         </div>
                         <div class="keyvisual_left_point_item">
                             <h3 class="font-roboto bold"><span class="tx_gradient point">POINT.</span><span class="tx_gradient number">02</span></h3>
-                            <p class="font-notosans bold navy">業界最高水準の<br>給与体系</p>
+                            <p class="font-notosans bold navy">業界<br class="sp_only">最高水準の<br>給与体系</p>
                         </div>
                         <div class="keyvisual_left_point_item">
                             <h3 class="font-roboto bold"><span class="tx_gradient point">POINT.</span><span class="tx_gradient number">03</span></h3>
-                            <p class="font-notosans bold navy">芸能人アスリート<br>御用達
+                            <p class="font-notosans bold navy">芸能人<br class="sp_only">アスリート<br>御用達
                             </p>
                         </div>
                     </div>
                     <button class="gradient-btn" type="button" onclick="location.href='#entry'">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></button>
                 </div>
-                <div class="keyvisual_right"><img src="./images/keyvisual_img_1.png"></div>
+                <div class="keyvisual_right pc_only"><img src="./images/keyvisual_img_1.png"></div>
             </div>
         </section>
 
@@ -65,7 +66,7 @@
                 <div class="precedent_bottom">
                     <div class="precedent_bottom_item font-notosans">
                         <img src="./images/precedent_sae.png" alt="">
-                        <h3 class="medium">入社○年目 SAEさん</h3>
+                        <h3 class="medium">入社○年目 ERISAさん</h3>
                         <p class="data medium">勤務務時間：160h/月<br>
                         指名料：270,000円<br>
                         給与：1,000,000円</p>
@@ -94,7 +95,7 @@
             <div class="precedent_right"></div>
 
             <img class="precedent_bg_01" src="./images/slash_01.svg">
-            <img class="precedent_bg_02" src="./images/slash_03.svg">
+            <img class="precedent_bg_02 pc_only" src="./images/slash_03.svg">
         </section>
 
         <section id="about">
@@ -426,11 +427,11 @@
                 <div class="flow_calltoaction_content">
                     <h3 class="font-notosans medium navy">理想の未来に､</h3>
                     <h3 class="font-notosans medium navy">一歩踏み出そう｡</h3>
-                    <p class="font-notosans bold white">今エントリーされた方に限り､資格講習費の<span>10</span>万円が<span class="cta_number">0</span>円で<br>
-                    ZSTA協会認定トレーナー資格が取得できるキャンペーン中！</p>
+                    <p class="font-notosans bold white">今エントリーされた方に限り､<br class="sp_only">資格講習費の<span>10</span>万円が<span class="cta_number">0</span>円で<br>
+                    ZSTA協会認定トレーナー資格が<br class="sp_only">取得できるキャンペーン中！</p>
                     <button class="gradient-btn" type="button" onclick="location.href='#entry'">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></button>
                 </div>
-                <!-- <img src="assets/images/flow/flow_cta_img.png"> -->
+                <img class="sp_only" src="./images/flow_cta_img.png">
             </div>
         </section>
 
