ハンバーガーメニューを実装しました。

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,25 @@
         <h1><img src="assets/images/common/logo_wh.png" alt="全力ストレッチ"></h1>
         <div class="header_right">
             <button class="gradient-btn pc_only" type="button" onclick="location.href='#entry'">WEBで簡単エントリー</button>
-        </div>
+
+            <div class="openbtn2"><span></span><span></span></div>
+                <nav id="g-nav">
+                    <div id="g-nav-list"><!--ナビの数が増えた場合縦スクロールするためのdiv※不要なら削除-->
+                        <img src="assets/images/common/logo_bk.png">
+                        <ul class="font-roboto bold">
+                            <li><a href="#precedent"><h2 class="tx_gradient" >PRECEDENT</h2><span class="font-notosans medium navy">給与事例</span></a></li>
+                            <li><a href="#about"><h2 class="tx_gradient" >ABOUT</h2><span class="font-notosans medium navy">全力ストレッチとは</span></a></li> 
+                            <li><a href="#point"><h2 class="tx_gradient" >POINT</h2><span class="font-notosans medium navy">全力ストレッチのポイント</span></a></li> 
+                            <li><a href="#schedule"><h2 class="tx_gradient" >SCHEDULE</h2><span class="font-notosans medium navy">仕事内容</span></a></li>
+                            <li><a href="#interview"><h2 class="tx_gradient" >INTERVIEW</h2><span class="font-notosans medium navy">先輩インタビュー</span></a></li>
+                            <li><a href="#area"><h2 class="tx_gradient" >AREA</h2><span class="font-notosans medium navy">あなたに合ったエリアで働ける</span></a></li>
+                            <li><a href="#flow"><h2 class="tx_gradient" >FLOW</h2><span class="font-notosans medium navy">エントリーからデビューまで</span></a></li>
+                            <li class="timeline_17"><a href="#recruit"><h2 class="tx_gradient" >RECRUIT</h2><span class="font-notosans medium navy">募集要項</span></a></li>
+                        </ul>
+                        <div class="button_wrap"><button class="gradient-btn" type="button" onclick="location.href='#entry'">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></button></div>
+                    </div>
+                </nav>
+            </div>
     </header>
 
     <main>
