--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
             <button class="gradient-btn pc_only" type="button" onclick="location.href='#entry'">WEBで簡単エントリー</button>
 
             <!-- ハンバーガーメニュー -->
-            <div class="openbtn2"><span></span><span></span></div>
+            <div class="openbtn2"><span class="js-header change-color"></span><span class="js-header change-color"></span></div>
                 <nav id="g-nav">
                     <div id="g-nav-list"><!--ナビの数が増えた場合縦スクロールするためのdiv※不要なら削除-->
                         <!-- <div class="nav_wrap"> -->
@@ -46,7 +46,7 @@
     </header>
 
     <main>
-        <section id="keyvisual">
+        <section id="keyvisual" class="fv">
             <div class="keyvisual_content">
                 <div class="keyvisual_left">
                     <img src="assets/images/keyvisual/keyvisual_title.svg" alt="あなたが輝く最高のキャリア">
@@ -82,7 +82,7 @@
                     <div class="precedent_top_text">
                         <h2 class="sec_title">PRECEDENT</h2>
                         <span class="sec_title_sub">給与事例</span>
-                        <p class="regular font-notosans">全力ストレッチの給与体系は､ストレッチ業界で最高水準。<br class="pc_only">
+                        <p class="regular font-notosans">全力ストレッチの給与体系は､ストレッチ業界で最高水準。<br class="pc_only tb_only">
                         理想の高収入が目指せます。最短2年で店長に昇進し、3年目には年収1000万円を掴むメンバーもいます。<br>
                         年収1,000万円以上も､あなたの活躍次第で到達可能です。</p>
                     </div>
@@ -90,7 +90,7 @@
                 <div class="precedent_bottom">
                     <div class="precedent_bottom_item font-notosans">
                         <img src="assets/images/precedent/precedent_sae.png" alt="">
-                        <h3 class="medium">本部講師 ERISAさん</h3>
+                        <h3 class="medium">本部講師ERISAさん</h3>
                         <p class="data medium">勤務務時間：160h/月<br>
                         指名料：270,000円<br>
                         給与：1,000,000円</p>
