--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </div>
                 <div class="precedent_bottom">
                     <div class="precedent_bottom_item font-notosans">
-                        <img src="./images/precedent_sae.png" alt="">
+                        <img src="./images/precedent_erisa.png" alt="">
                         <h3 class="medium">本部講師ERISAさん</h3>
                         <p class="data medium">勤務務時間：160h/月<br>
                         指名料：270,000円<br>
