ハンバーガーメニューの動きを修正しました。

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,8 @@
                                     <li><a href="#flow"><h2 class="tx_gradient" >FLOW</h2><span class="font-notosans medium navy">エントリーからデビューまで</span></a></li>
                                     <li class="timeline_17"><a href="#recruit"><h2 class="tx_gradient" >RECRUIT</h2><span class="font-notosans medium navy">募集要項</span></a></li>
                                 </ul>
-                                <div class="button_wrap"><button class="gradient-btn" type="button" onclick="location.href='#entry'">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></button></div>
+                                <!-- <div class="button_wrap"><button class="gradient-btn" type="button" onclick="location.href='#entry'">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></button></div> -->
+                                <div class="button_wrap"><a class="gradient-btn" href="#entry">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></a></div>
                             </div>
                         <!-- </div> -->
                     </div>
@@ -89,7 +90,7 @@
                 </div>
                 <div class="precedent_bottom">
                     <div class="precedent_bottom_item font-notosans">
-                        <img src="assets/images/precedent/precedent_sae.png" alt="">
+                        <img src="assets/images/precedent/precedent_erisa.png" alt="">
                         <h3 class="medium">本部講師ERISAさん</h3>
                         <p class="data medium">勤務務時間：160h/月<br>
                         指名料：270,000円<br>
@@ -498,7 +499,7 @@
                     <tr>
                         <th class="medium">勤務地</th>
                         <td class="regular">全国35店舗の中からお選びいただけます。
-                        札幌店、仙台店、東池袋店、池袋西口店、高田馬場店、新宿西口店、新宿三丁目店、新宿御苑店、渋谷宮益坂店、三軒茶屋店、中目黒店、学芸大学店、自由が丘店、恵比寿店、目黒店、赤坂店、麻布十番店、人形町店、新橋店銀座５店、秋葉原店、三田店、六本木店、表参道店、西五反田店、町田店、吉祥寺店、川崎店、横浜元町店、横浜西口店、名古屋栄店、大阪堀江店、大阪西梅田店、神戸元町店、福岡天神赤坂店</td>
+                        札幌店、仙台店、東池袋店、池袋西口店、高田馬場店、新宿西口店、新宿三丁目店、新宿御苑店、渋谷宮益坂店、三軒茶屋店、中目黒店、学芸大学店、自由が丘店、恵比寿店、目黒店、赤坂店、麻布十番店、人形町店、新橋店、銀座５店、秋葉原店、三田店、六本木店、表参道店、西五反田店、町田店、吉祥寺店、川崎店、横浜元町店、横浜西口店、名古屋栄店、大阪堀江店、大阪西梅田店、神戸元町店、福岡天神赤坂店</td>
                     </tr>
 
                     <tr>
@@ -585,12 +586,42 @@
                                     <div class="select_wrap"><select onchange="this.className=this.options[this.selectedIndex].className"
                                     class="input_lightblue" class="form_input regular" name="example" required>
                                         <option class="input_lightblue" value="">選択してください</option>
-                                        <option class="input_navy">選択肢のサンプル1</option>
-                                        <option class="input_navy">選択肢のサンプル2</option>
-                                        <option class="input_navy">選択肢のサンプル3</option>
-                                        <option class="input_navy">選択肢のサンプル4</option>
-                                        <option class="input_navy">選択肢のサンプル5</option>
-                                        </select></div>
+                                        <option class="input_navy">札幌店</option>
+                                        <option class="input_navy">仙台店</option>
+                                        <option class="input_navy">東池袋店</option>
+                                        <option class="input_navy">池袋西口店</option>
+                                        <option class="input_navy">高田馬場店</option>
+                                        <option class="input_navy">新宿西口店</option>
+                                        <option class="input_navy">新宿三丁目店</option>
+                                        <option class="input_navy">新宿御苑店</option>
+                                        <option class="input_navy">渋谷宮益坂店</option>
+                                        <option class="input_navy">三軒茶屋店</option>
+                                        <option class="input_navy">中目黒店</option>
+                                        <option class="input_navy">学芸大学店</option>
+                                        <option class="input_navy">自由が丘店</option>
+                                        <option class="input_navy">恵比寿店</option>
+                                        <option class="input_navy">目黒店</option>
+                                        <option class="input_navy">赤坂店</option>
+                                        <option class="input_navy">麻布十番店</option>
+                                        <option class="input_navy">人形町店</option>
+                                        <option class="input_navy">新橋店</option>
+                                        <option class="input_navy">銀座５店</option>
+                                        <option class="input_navy">秋葉原店</option>
+                                        <option class="input_navy">三田店</option>
+                                        <option class="input_navy">六本木店</option>
+                                        <option class="input_navy">表参道店</option>
+                                        <option class="input_navy">西五反田店</option>
+                                        <option class="input_navy">町田店</option>
+                                        <option class="input_navy">吉祥寺店</option>
+                                        <option class="input_navy">川崎店</option>
+                                        <option class="input_navy">横浜元町店</option>
+                                        <option class="input_navy">横浜西口店</option>
+                                        <option class="input_navy">名古屋栄店</option>
+                                        <option class="input_navy">大阪堀江店</option>
+                                        <option class="input_navy">大阪西梅田店</option>
+                                        <option class="input_navy">神戸元町店</option>
+                                        <option class="input_navy">福岡天神赤坂店</option>
+                                    </select></div>
                                 </td>
                             </tr>
                         </table>
